# GameJangler

./: .gitignore  LICENSE  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.erb/dll/: renderer.dev.dll.js
src/: style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  scraper.rs  tests.rs
src-tauri/src/db/: mod.rs
src-tauri/src/events/: mod.rs
src-tauri/src/scanner/: mod.rs
src-tauri/src/scanner/epic/: mod.rs  tests.rs
src-tauri/src/scanner/steam/: mod.rs  tests.rs
src-tauri/src/scraper/: mod.rs  tests.rs
src-tauri/src/scraper/epic/: mod.rs  tests.rs
src-tauri/src/scraper/steam/: mod.rs  tests.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/src/: lib.rs  tests.rs
src/components/: AppCarousel.tsx  Card.tsx  Carousel.tsx  Container.tsx  Loader.tsx  LogoFooter.tsx  Navbar.tsx  Navhamburger.tsx  Navlogo.tsx  Navtabs.tsx  NoPlatforms.tsx  SaveCarousel.tsx  StorageCarousel.tsx
src/components/NoPlatforms/: NoPlatforms.tsx  NoPlatforms_Darwin.tsx  NoPlatforms_Linux.tsx  NoPlatforms_Windows.tsx
src/components/navbar/: index.tsx
src/context/: state.tsx  theme.tsx
src/hooks/: settings_manager.ts
src/hooks/scanner/: index.ts
src/hooks/settings/: index.ts
src/main/: main.ts
src/pages/: _app.tsx  apps.tsx  index.tsx  saves.tsx  settings.tsx
