[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Jarad DeLorenzo"]
license = ""
repository = "https://github.com/delorenj/GameJangler"
default-run = "app"
edition = "2021"
rust-version = "1.62"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
error-chain = "0.12.4"
glob = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["api-all"] }
nanoid = "0.4.0"
finder = "0.1"
rusqlite = { version = "0.28.0", features = ["bundled"] }
log = "0.4.17"
simplelog = { version = "0.12.0", features = ["paris"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
